examples/errors/const_reassign.cberk
const hi: int = 34;

fun main() {
    hi = 23;
}

main()
